Fix: Fixed date picker issue

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1819,8 +1819,7 @@
 
                                     <div class="form-group">
                                         <label for="PeacemakerId">Date *</label>
-                                        <my-date-picker name="CounselingDate" [options]="myDatePickerOptions" id="CounselingDate"
-                                                        formControlName="CounselingDate"></my-date-picker>
+                                        <my-date-picker name="CounselingDate" [options]="myDatePickerOptions" id="CounselingDate" formControlName="CounselingDate"></my-date-picker>
                                         <div>
                                             <small *ngIf="caseSessionForm.controls['CounselingDate'].hasError('required') && caseSessionForm.controls['CounselingDate'].touched" class="mat-text-warn">Date is required.</small>
                                         </div>
@@ -1848,8 +1847,7 @@
 
                                     <div class="form-group">
                                         <label for="PeacemakerId">Next Session Date</label>
-                                        <my-date-picker name="NextSessionScheduled" [options]="myDatePickerOptions" id="NextSessionScheduled"
-                                                        formControlName="NextSessionScheduled"></my-date-picker>
+                                        <my-date-picker name="NextSessionScheduled" [options]="myDatePickerOptions" id="NextSessionScheduled" formControlName="NextSessionScheduled"></my-date-picker>
                                     </div>
 
                                     <div class="form-group">
