--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1273,8 +1273,13 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">Total no of sessions</label>
-                                    <input [formControl]="caseManageForm.controls['TotalNoOfSessionsLookupId']" inputmode="numeric" maxlength="2" class="form-control" />
+                                    <div class="form-group" [class.has-danger]="caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid && caseManageForm.controls['TotalNoOfSessionsLookupId'].touched">
+                                        <label for="CenterId">Total no of sessions</label>
+                                        <input type="number" id="TotalNoOfSessionsLookupId" [formControl]="caseManageForm.controls['TotalNoOfSessionsLookupId']" class="form-control" />
+                                        <small *ngIf="caseManageForm.controls['TotalNoOfSessionsLookupId'].dirty && caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid">                                            
+                                                Value should be between 0 and 99
+                                        </small>
+                                    </div>
                                 </div>
 
                                 <div class="form-group">
@@ -1326,7 +1331,7 @@
 
 
                                 <div class="form-group">
-                                    <button class="btn btn-primary" (click)="onUpdateManage()">Update</button>
+                                    <button class="btn btn-primary" [disabled]="!caseManageForm.valid" (click)="onUpdateManage()">Update</button>
                                 </div>
                             </div>
                         </div>
