--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1041,7 +1041,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let sessionLog of caseBook.SessionLog; let i = index">
+                                <tr *ngFor="let sessionLog of caseBook.vSessionLog; let i = index">
                                     <td>{{sessionLog.CounselingDate}}</td>
                                     <td>{{sessionLog.TypeOfCounselingDesc}}</td>
                                     <td>{{sessionLog.DurationOfSessionMIn}}</td>
