chore: removed extra colons

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
@@ -223,7 +223,7 @@
                                 <span>{{ (vocationalSkillsOptionsList | MatchesPipe:familyHouseHold.VocationalSkillsLookupId) }}</span>
                             </div>
                             <div class="form-group">
-                                <label>If other Vocational skills, please specify  :  :</label>
+                                <label>If other Vocational skills, please specify  :</label>
                                 <span>{{ familyHouseHold.VocationalSkillsDesc }}</span>
                             </div>
                         </div>
@@ -242,7 +242,7 @@
                                 <span>{{ (occupationOptionsList | MatchesPipe:familyHouseHold.OccupationLookupId) }}</span>
                             </div>
                             <div class="form-group">
-                                <label>If self-employed or employed, please specify  :  :</label>
+                                <label>If self-employed or employed, please specify  :</label>
                                 <span>{{ familyHouseHold.OccupationDesc }}</span>
                             </div>
                             <div class="form-group">
@@ -428,7 +428,7 @@
                                     <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.AnySubstanceLookupId) }}</span>
                                 </div>
                                 <div class="form-group">
-                                    <label>Please specify  :  :</label>
+                                    <label>Please specify  :</label>
                                     <span>{{ physicalHealthForm.AnySubstanceDesc }}</span>
                                 </div>
                                 <div class="form-group">
@@ -436,7 +436,7 @@
                                     <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.CurrentlyPregnantLookup) }}</span>
                                 </div>
                                 <div class="form-group">
-                                    <label>If yes, give details  :  :</label>
+                                    <label>If yes, give details  :</label>
                                     <span>{{ physicalHealthForm.CurrentlyPregnantDesc }}</span>
                                 </div>
                                 <div class="form-group">
