fix: clearing off local storage when user signs out or closes browser

--- a/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
@@ -36,6 +36,7 @@
         <!-- /.conainer-fluid -->
     </main>
 </div>
+<div (window:beforeunload)="clearLocalStorage()"></div>
 <!--<footer class="app-footer">
     <a href="http://mychoicesfoundation.org">My Choices Foundation</a> &copy; 2017.
 </footer>-->
