--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.scss
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.scss
@@ -1,11 +1,3 @@
-﻿body {
-}
-
-.centered {
-    margin: 0 auto;
-    text-align: left;
-    width: 800px;
-}
-label {
-    color: white;
+﻿.blah{
+    color: hotpink;
 }
